# serde_table

./: Cargo.toml  LICENSE  README.md
serde_table/: Cargo.toml  README.md
serde_table/src/: lib.rs
serde_table/tests/: integration_test.rs
serde_table_internals/: Cargo.toml  README.md
serde_table_internals/src/: lib.rs
