[workspace]
members = [
  "serde_table",
  "serde_table_internals"
]

[patch.crates-io]
serde_table = { path = "serde_table" }

[workspace.dependencies]
proc-macro2 = { version = "1.0.74", default-features = false }
quote = { version = "1.0.35", default-features = false }
syn = { version = "2.0.96", default-features = false }
