[package]
name = "serde_table"
version = "0.1.0"
authors = ["Trenchant <trenchant.dev@gmail.com>"]
# build = "build.rs"
categories = ["rust-patterns"]
description = "Write structs in an easy table format."
documentation = "https://docs.rs/serde_table"
edition = "2018"
homepage = "https://github.com/trenchant-dev/serde_table"
keywords = ["serde", "serialization", "table", "dataframe"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/trenchant-dev/serde_table"
rust-version = "1.31"

[dependencies]
serde_table_internals = { version = "0", path = "../serde_table_internals" }
serde = ">= 1"
csv = { version = ">= 1" }

[dev-dependencies]
serde = { version = ">= 1", features = ["derive"] }

# [lib]
# doc-scrape-examples = false

# [package.metadata.playground]
# features = ["derive", "rc"]

[package.metadata.docs.rs]
# features = ["derive", "rc", "unstable"]
# targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
